# project2_morozov_vasilii_m25-555

./: .gitignore  Makefile  README.md  cast1.cast  cast2.cast  cast3.cast  db_meta.json  pyproject.toml
src/primitive_db/: constants.py  core.py  decorators.py  engine.py  main.py  utils.py
